# SolaRide_Horizon

./: .gitignore  Accueil.py  README.md  df_analysesFinal.csv  essai_webscrap.ipynb  extract_meteov4.ipynb  main.py  notebook.ipynb  pyproject.toml  requirements.txt  style.css
.github/workflows/: main.yml
.streamlit/: config.toml
Notebooks/: MAJ_BDD.ipynb  essai_webscrap.ipynb  extract_meteo_mensuel.ipynb  modele_ml_v3.ipynb  notebook.ipynb  notebook_ctrlv.ipynb  simulation_production.ipynb  simulator_function.ipynb
chatbot/: PKG-INFO  app.py
data_viz/: README.md  df_analysesFinal.csv  graph.py  requires.txt
datasets/: BDD_PC_PotentielSolaire_Annuel.csv  BDD_PC_Simulation.csv  df_solarscore.csv  df_voies_vertes.csv  df_voies_vertes_MAJ_AOUT.csv
ecoroof_chatbot/: README.md  SOURCES.txt  app.py
pages/: 1_Projet.py  2_Data.py  2_En France.py  3_Simulateur.py  4_Expert IA.py
