[project]
name = "projet-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "matplotlib>=3.10.3",
    "openai>=1.97.0",
    "openmeteo-requests>=1.5.0",
    "pandas>=2.3.0",
    "plotly-express>=0.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "streamlit-folium>=0.25.0",
    "typing>=3.10.0.0",
]
